[package]
name = "assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4.26"
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"

# Feel free to add any dependencies you want to use!
hmac = "0.12.1"
sha2 = "0.10.6"
base64 = "0.21.2"
percent-encoding = "2.3.1"
arrayvec = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8"
[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"

[[bench]]
name = "parser_bench"
harness = false

[lib]
name = "assignment"
path = "src/main.rs"
